--- a/script.js/index.css
+++ b/script.js/index.css
@@ -60,7 +60,7 @@ body {
 
 .header {
     height: 60vh !important;
-    background: url(img/header.jpg) no-repeat center;
+    background: url(img/road-g54ef9e010_1280.jpg) no-repeat center;
     background-size: cover;
 }
 
@@ -163,7 +163,7 @@ p {
 }
 
 .price {
-    background: url(img/costos.jpg) no-repeat center;
+    background: url(img/4082373.jpg) no-repeat center;
     background-attachment: fixed;
     background-size: cover;
     text-align: center;
