--- a/script.js/index.css
+++ b/script.js/index.css
@@ -58,11 +58,22 @@ body {
 
 }
 
-.header {
-    height: 60vh !important;
-    background: url(img/road-g54ef9e010_1280.jpg) no-repeat center;
-    background-size: cover;
-}
+.content.header {
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
+  }
+  
+  .content.header video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
+
 
 .title {
     margin-bottom: 40px;
