--- a/script.js/index.css
+++ b/script.js/index.css
@@ -48,7 +48,7 @@ body {
 }
 
 .navbar a:hover {
-    background: #3f3f3f;
+    background: #609966;
 }
 
 .header {
@@ -97,12 +97,12 @@ p {
     border: 2px solid #9c27b0;
     color: #fff;
     text-decoration: none;
-    background: #9c27b0;
+    background: transparent;
     border-radius: 20px;
 }
 
 .btn:hover {
-    background: none;
+    background: rgb(92, 109, 67);
     
 }
 
