--- a/script.js/index.css
+++ b/script.js/index.css
@@ -10,7 +10,9 @@ LA PAGINA */
     font-size: 100%;
     vertical-align: baseline;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 body {
     text-align: center;
     font-family: sans-serif;
@@ -27,9 +29,10 @@ body {
     z-index: 100;
 }
 
-.navbar {
+.navbar ul {
     display: flex;
     margin-right: 10px;
+    list-style: none;
 }
 
 .logo {
