--- a/script.js/index.css
+++ b/script.js/index.css
@@ -124,15 +124,14 @@ p {
 
 
 .content {
-    height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 1rem;
     align-items: center;
 }
 
 .sau {
-    padding: 30px;
     background: #609966
 }
 
@@ -181,7 +180,6 @@ p {
 }
 
 .content-paquetes {  /* NO FUNCIONA */
-    padding: 30px;
     background: #9DC08B;
     height: 50vh;
     display: flex;
