--- a/proyecto/proyecto.css
+++ b/proyecto/proyecto.css
@@ -9,6 +9,7 @@ LA PAGINA */
     border: 0;
     font-size: 100%;
     vertical-align: baseline;
+    box-sizing: border-box;
 }
 html{
     scroll-behavior: smooth;
@@ -96,6 +97,9 @@ body {
 p {
     font-size: 18px;
     max-width: 70ch;
+    color: #fff;
+}
+a:any-link{
     color: #fff;
 }
 
@@ -294,6 +298,8 @@ p {
     font-size: 12px;
   margin-bottom: 1rem;  
 }
+
+/* Formulario */
 .contacto {
     display: flex;
     flex-direction: column;
@@ -301,6 +307,39 @@ p {
     align-items: center;
     padding: 2rem;
 }
+.contacto p{
+    font-size: 1rem;
+    font-weight: 400;
+}
+.contacto .titulo{
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+.contacto form{
+    margin: 1rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+.contacto form fieldset{
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1rem;
+    max-width: 65%;
+}
+.contacto form label{
+    flex: 1 calc(50% - 2rem);
+}
+.contacto form input,
+.contacto form textarea{
+    font-family: sans-serif;
+    padding: .5em;
+    width: 100%;
+}
+.contacto form label[for='mensaje']{
+    flex: 0 100%;
+}
+
 .logo-pie {    
     height: 45vh;
     display: flex;
@@ -311,9 +350,6 @@ p {
 }
 .contacto {
     margin-bottom: 40px;
-    font-size: 60px;
-    font-weight: 600;
-    text-transform: uppercase;
     color: #fff;
 }
 .logo-pie {
