--- a/proyecto/proyecto.css
+++ b/proyecto/proyecto.css
@@ -26,7 +26,7 @@ body {
     align-items: center;
     justify-content: space-between;
     height: 63px;
-    background:  -webkit-linear-gradient(left, #1f5da4, #00a0af);;
+    background:  -webkit-linear-gradient(left, #1f5da4, #00a0af);
     position: fixed;
     width: 100%;
     z-index: 100;
@@ -87,11 +87,18 @@ body {
 
 
 .title {
-    margin-bottom: 40px;
-    font-size: 60px;
+    color: #fff;
+    display: block;
+    font-size: 2rem;
     font-weight: 600;
     text-transform: uppercase;
-    color: #fff;
+    border-radius: 8px;
+    padding: 1rem;
+    max-width: fit-content;
+    margin: 0 auto 2rem;
+    background-color: rgba(0, 0, 0, .25);
+    backdrop-filter: blur(4px);
+    width: fit-content;
 }
 
 p {
@@ -108,10 +115,10 @@ a:any-link{
     flex: 1 50%;
     margin-top: 15px;
     padding: 10px 40px;
-    border: 2px solid #9c27b0;
+    border: 2px solid 00a0af;
+    background-color: rgba(255, 255, 255, .25);
     color: #fff;
     text-decoration: none;
-    background: transparent;
     border-radius: 20px;
 }
 
@@ -311,10 +318,7 @@ a:any-link{
     font-size: 1rem;
     font-weight: 400;
 }
-.contacto .titulo{
-    font-size: 2rem;
-    margin-bottom: 1rem;
-}
+
 .contacto form{
     margin: 1rem;
     display: flex;
@@ -338,6 +342,10 @@ a:any-link{
 }
 .contacto form label[for='mensaje']{
     flex: 0 100%;
+}
+.contacto form button{
+    max-width: fit-content;
+    margin-left: auto;
 }
 
 .logo-pie {    
