--- a/script.js/proyecto.css
+++ b/script.js/proyecto.css
@@ -9,21 +9,24 @@ LA PAGINA */
     border: 0;
     font-size: 100%;
     vertical-align: baseline;
+    box-sizing: border-box;
 }
 html{
     scroll-behavior: smooth;
 }
 body {
+    background-color: #1f5da4;
     text-align: center;
     font-family: sans-serif;
 }
+
 
 .head { /* despues del BODY viene un DIV que dentro tiene un NAV */
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 63px;
-    background:  -webkit-linear-gradient(left, #1f5da4, #00a0af);;
+    background:  -webkit-linear-gradient(left, #1f5da4, #00a0af);
     position: fixed;
     width: 100%;
     z-index: 100;
@@ -84,28 +87,38 @@ body {
 
 
 .title {
-    margin-bottom: 40px;
-    font-size: 60px;
+    color: #fff;
+    display: block;
+    font-size: 2rem;
     font-weight: 600;
     text-transform: uppercase;
-    color: #fff;
+    border-radius: 8px;
+    padding: 1rem;
+    max-width: fit-content;
+    margin: 0 auto 2rem;
+    background-color: rgba(0, 0, 0, .25);
+    backdrop-filter: blur(4px);
+    width: fit-content;
 }
 
 p {
-    margin-bottom: 40px;
     font-size: 18px;
+    max-width: 70ch;
     color: #fff;
-    padding: 0 100px;
+}
+a:any-link{
+    color: #fff;
 }
 
 .btn {
     display: inline-block;
+    flex: 1 50%;
     margin-top: 15px;
     padding: 10px 40px;
-    border: 2px solid #9c27b0;
+    border: 2px solid 00a0af;
+    background-color: rgba(255, 255, 255, .25);
     color: #fff;
     text-decoration: none;
-    background: transparent;
     border-radius: 20px;
 }
 
@@ -116,6 +129,7 @@ p {
 
 .btn-home {
     display: flex;
+    margin: 1rem;
 }
 
 .btn-home a {
@@ -124,7 +138,6 @@ p {
 
 
 .content { /* corresponde a la SECTION "conten-sau" DESTINOS */
-    height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -183,7 +196,6 @@ p {
 .contenedor-padre1 {  /* es la SECTION */
     padding: 30px;
     background: -webkit-linear-gradient(left, #00a0af , #1f5da4);
-    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -210,7 +222,6 @@ p {
 .contenedor-padre2 {  /* es la SECTION y dentro hay un DIV hijo*/
     padding: 30px;
     background: -webkit-linear-gradient(left, #00a0af , #1f5da4);
-    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -233,13 +244,24 @@ p {
     box-shadow: 0 .3rem 5rem rgba(0, 0 , 0, .5);
     margin: 2rem;
 }
+.imagen-cajas2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+    display: block;
+    margin: 0 auto;
+}
 
 
-.price {  /*  esto es un SECTION dentro hay un ARTICLE un H2 y un parrafo y la imagen  */
+.nosotros {  /*  esto es un SECTION dentro hay un ARTICLE un H2 y un parrafo y la imagen  */
     background: url(img/4082373.jpg) no-repeat center;
     background-attachment: fixed;
     background-size: cover;
     text-align: center;
+}
+.nosotros .contain{
+    min-height: 300px;
+    padding: 2rem;
 }
 
 
@@ -270,22 +292,70 @@ p {
 
 .pie {  /* FOOTER dentro tiene dos DIV ( como en el boceto */
     padding: 30px;
-    background: -webkit-linear-gradient(left , #1f5da4, #00a0af );
-    height: 90vh;
+    color: #fff;
+    background: #505050;
     display: flex;
-    flex-direction: column;                /* TODO EL FOOTER ES SOLO UNA IDEA , MANIPULEN CON CONFIANZA */
-    justify-content: center;               /*  DE AQUI PARA ABAJO ES FOOTER MODIFIQUEN SIN MIEDO */
-    align-items: center;                   /*  YO VOY A PROBAR CON BOOTSTRAP A SI ME SALE */
+    gap: 1rem;
+    flex-flow: row wrap;                /*  YO VOY A PROBAR CON BOOTSTRAP A SI ME SALE */
 }
+.pie p{
+    font-size: 12px;
+}
+.pie div {
+    flex: 1;
+}
+.pie div ul {
+    list-style: none;
+    text-align: initial;
+}
+.pie div ul li {
+    font-size: 12px;
+  margin-bottom: 1rem;  
+}
+
+/* Formulario */
 .contacto {
-    height: 45vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 2rem;
 }
-.logo-pie {
-    
+.contacto p{
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.contacto form{
+    margin: 1rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+.contacto form fieldset{
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1rem;
+    max-width: 65%;
+}
+.contacto form label{
+    flex: 1 calc(50% - 2rem);
+}
+.contacto form input,
+.contacto form textarea{
+    font-family: sans-serif;
+    padding: .5em;
+    width: 100%;
+}
+.contacto form label[for='mensaje']{
+    flex: 0 100%;
+}
+.contacto form button{
+    max-width: fit-content;
+    margin-left: auto;
+}
+
+.logo-pie {    
     height: 45vh;
     display: flex;
     flex-direction: column;
@@ -295,9 +365,6 @@ p {
 }
 .contacto {
     margin-bottom: 40px;
-    font-size: 60px;
-    font-weight: 600;
-    text-transform: uppercase;
     color: #fff;
 }
 .logo-pie {
