--- a/proyecto/proyecto.css
+++ b/proyecto/proyecto.css
@@ -25,8 +25,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 63px;
-    background:  -webkit-linear-gradient(left,#00a0af, #1f5da4);
+    height: 100px;
+    background:  -webkit-linear-gradient(left, white, #cedee0);
     position: fixed;
     width: 100%;
     z-index: 100;
@@ -34,40 +34,38 @@ body {
 
 .navbar ul {
     display: flex;
-    margin-right: 10px;
+    margin-right: 100px;
     list-style: none;
 }
 
 .logo { 
-    margin-left: 10px;
+    margin-left: 10%;
     width: 150px;
 }     
 
 
-.logo img {
-    
-   height: 60px;
-   width:200px;
- }
 
 .logo a {
     text-decoration: none;
-    color: #fff;
+    color: #1f5da4;
     text-transform: uppercase;
     font-size: 20px;
 }
 
 .navbar a {
     display: block;
+
     padding: 20px 20px;
-    color: #fff;
+
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 24px;
+    font-weight: bold;
+
 }
 
 .navbar a:hover {
-    background: #cedee0;
+    background:  #70d9e2;
 }
 
 .header {  /* corresponde al HEADER que agrupa dos DIV el primer DIV contiene el titulo GRUPO J */
@@ -97,14 +95,13 @@ body {
 .title {
     color: #fff;
     display: block;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 600;
     text-transform: uppercase;
     border-radius: 8px;
     padding: 1rem;
     max-width: fit-content;
     margin: 0 auto 2rem;
-    background-color: rgba(0, 0, 0, .25);
     backdrop-filter: blur(4px);
     width: fit-content;
 }
@@ -112,10 +109,20 @@ body {
 p {
     font-size: 18px;
     max-width: 70ch;
-    color: #fff;
+    color: white;
 }
+
+h5 {
+    font-size: 24px;
+    max-width: 95ch;
+    color: white;
+    font-weight: normal;
+    text-shadow: 1px 1px 5px black;
+}
+
+/*              TITULO NAVEGADOR            */
 a:any-link{
-    color: #fff;
+    color: #1f5da4;
 }
 
 .btn {
@@ -124,14 +131,17 @@ a:any-link{
     margin-top: 15px;
     padding: 10px 40px;
     border: 2px solid 00a0af;
-    background-color: rgba(255, 255, 255, .25);
-    color: #fff;
+    background-color: #cedee0;
+    /*background-color: rgba(255, 255, 255, .25);*/
+    color: #1f5da4;
+    font-weight: bold;
+    font-size: 20px;
     text-decoration: none;
     border-radius: 20px;
 }
 
 .btn:hover {  /* el hover se aplica a todos los BTN "saber mas" */
-    background: #cedee0;
+    background: #70d9e2;
     
 }
 
@@ -153,7 +163,7 @@ a:any-link{
 }
 
 .sau {
-    padding: 30px;
+    padding-top: 150px;
     background: -webkit-linear-gradient(left, #1f5da4, #00a0af);
 }
 
@@ -210,7 +220,8 @@ a:any-link{
 }
 /* contenedor PAQUETES */
 .contenedor-padre1 {  /* es la SECTION */
-    padding: 30px;
+    padding-top: 150px;
+    padding-bottom: 50px;
     background: -webkit-linear-gradient(left, #00a0af , #1f5da4);
     display: flex;
     flex-direction: column;
@@ -223,6 +234,7 @@ a:any-link{
     justify-content:center;
     flex-wrap: wrap;
     text-align: center;
+    padding-top: -150px;
 }
 
 .cajas1 {
@@ -240,10 +252,11 @@ a:any-link{
     position: absolute;
     color: white;
     z-index: 1;
-    top: 20%; /* para posicionar el encabezado en el centro de la imagen verticalmente */
+    top: 30%; /* para posicionar el encabezado en el centro de la imagen verticalmente */
     left: 50%; /* para posicionar el encabezado en el centro de la imagen horizontalmente */
     transform: translate(-50%, -50%); /* para centrar el encabezado exactamente en el centro de la imagen */
-    font-size: 30px;
+    font-size: 40px;
+    text-shadow: 1px 1px 5px #242b2c;
 }
 
 .cajas1 p {
@@ -254,7 +267,7 @@ a:any-link{
     left: 50%; /* para posicionar el párrafo en el centro de la imagen horizontalmente */
     transform: translateX(-50%); /* para centrar el párrafo exactamente en el centro de la imagen horizontalmente */
     font-size: 20px;
-    top: 40%;
+    top: 50%;
     margin: 40px 0;
 }
 .imagen-cajas1 {
@@ -310,13 +323,14 @@ a:any-link{
 .nosotros .contain{
     min-height: 300px;
     padding: 2rem;
+    padding-top: 150px;
+    padding-bottom: 50px;
 }
 
 
 .contact {
     padding-top: 20px;
     background: -webkit-linear-gradient(left, #1f5da4, #00a0af);
-    padding-bottom: 0;
 }
 
 
@@ -341,20 +355,22 @@ a:any-link{
 .pie {  /* FOOTER dentro tiene dos DIV ( como en el boceto */
     padding: 30px;
     color: #fff;
-    background: #505050;
+    background: #242b2c;
     display: flex;
-    gap: 1rem;
+    gap: 20rem;
     flex-flow: row wrap;                /*  YO VOY A PROBAR CON BOOTSTRAP A SI ME SALE */
 }
 .pie p{
     font-size: 12px;
+    
 }
 .pie div {
     flex: 1;
 }
 .pie div ul {
     list-style: none;
-    text-align: initial;
+    text-align: left;
+    
 }
 .pie div ul li {
     font-size: 12px;
@@ -368,10 +384,11 @@ a:any-link{
     justify-content: center;
     align-items: center;
     padding: 2rem;
+    padding-top: 80px;
 }
 .contacto p{
     font-size: 1rem;
-    font-weight: 400;
+    text-align: left;
 }
 
 .contacto form{
@@ -412,7 +429,7 @@ a:any-link{
     
 }
 .contacto {
-    margin-bottom: 40px;
+    /*margin-bottom: 0px;*/
     color: #fff;
 }
 .logo-pie {
