Limpieza y mejoras estructura

--- a/proyecto/proyecto.css
+++ b/proyecto/proyecto.css
@@ -126,8 +126,8 @@ a:any-link{
 }
 
 .btn {
-    display: inline-block;
-    flex: 1 50%;
+    display: flex;
+    flex: 0 auto;
     margin-top: 15px;
     padding: 10px 40px;
     border: 2px solid 00a0af;
@@ -163,7 +163,7 @@ a:any-link{
 }
 
 .sau {
-    padding-top: 150px;
+    padding: 3rem 0 6rem;
     background: -webkit-linear-gradient(left, #1f5da4, #00a0af);
 }
 
@@ -220,11 +220,10 @@ a:any-link{
 }
 /* contenedor PAQUETES */
 .contenedor-padre1 {  /* es la SECTION */
-    padding-top: 150px;
-    padding-bottom: 50px;
+    padding: 3rem 0 6rem;
     background: -webkit-linear-gradient(left, #00a0af , #1f5da4);
     display: flex;
-    flex-direction: column;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
 }
@@ -280,7 +279,7 @@ a:any-link{
 
 /* contenedor GALERIA */
 .contenedor-padre2 {  /* es la SECTION y dentro hay un DIV hijo*/
-    padding: 30px;
+    padding: 3rem 0 6rem;
     background: -webkit-linear-gradient(left, #00a0af , #1f5da4);
     display: flex;
     flex-direction: column;
@@ -321,10 +320,7 @@ a:any-link{
     text-align: center;
 }
 .nosotros .contain{
-    min-height: 300px;
-    padding: 2rem;
-    padding-top: 150px;
-    padding-bottom: 50px;
+    padding: 3rem 0 6rem;
 }
 
 
@@ -361,13 +357,21 @@ a:any-link{
     flex-flow: row wrap;                /*  YO VOY A PROBAR CON BOOTSTRAP A SI ME SALE */
 }
 .pie p{
-    font-size: 12px;
-    
+    font-size: 12px;  
+}
+.pie a:any-link{
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 1rem;
+}
+.pie a:hover{
+    text-decoration: underline;
 }
 .pie div {
     flex: 1;
 }
-.pie div ul {
+.pie ul {
     list-style: none;
     text-align: left;
     
@@ -380,11 +384,13 @@ a:any-link{
 /* Formulario */
 .contacto {
     display: flex;
-    flex-direction: column;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     padding: 2rem;
-    padding-top: 80px;
+}
+.contacto > div{
+    max-width: clamp(38rem, 1vw , 320px);
 }
 .contacto p{
     font-size: 1rem;
@@ -392,16 +398,16 @@ a:any-link{
 }
 
 .contacto form{
-    margin: 1rem;
+    margin: 1rem 0 6rem;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    width: 100%;
 }
 .contacto form fieldset{
     display: flex;
     flex-flow: row wrap;
     gap: 1rem;
-    max-width: 65%;
 }
 .contacto form label{
     flex: 1 calc(50% - 2rem);
