--- a/proyecto/proyecto.css
+++ b/proyecto/proyecto.css
@@ -33,11 +33,11 @@ body {
     width: 100%;
     z-index: 100;
 }
-
+/*
 img{
-    max-width: 100%;
-    height: auto;
-}
+    /*max-width: 100%;
+    /*height: auto;
+}*/
 .navbar{
     padding: 0 1rem;
 }
